--- a/package.json
+++ b/package.json
@@ -52,11 +52,14 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "quill-image-drop-module": "^1.0.3",
     "react": "^16.11.0",
     "react-app-polyfill": "^1.0.4",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.11.0",
+    "react-player": "^1.15.2",
+    "react-quill": "^1.3.3",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
